--- a/environment.yml
+++ b/environment.yml
@@ -1,2 +1,13 @@
+channels:
+  - conda-forge
 dependencies:
-   - PIL
+  - numpy
+  - psutil
+  - toolz
+  - matplotlib
+  - dill
+  - pandas
+  - partd
+  - bokeh
+  - dask
+  - PIL
